api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: default
spec:
  gatewayClassName: consul
  listeners:
  - protocol: HTTP
    port: 80
    name: http1
    allowedRoutes:
      namespaces:
        from: Same
