httproute.yaml
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: route-1
#   namespace: default
# spec:
#   parentRefs:
#   - name: api-gateway
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /
#     backendRefs:
#     - kind: Service
#       name: dashboard
#       port: 9002
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /
#     backendRefs:
#     - kind: Service
#       name: damage-report
#       port: 80

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-1
spec:
  parentRefs:
  - name: api-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: nginx
      port: 80
      # name: ui
      # port: 80
